* Create `/lib/` folder to store bundled libraries and ancillary files
* Enqueue JavaScripts and CSS for SlickNav JavaScript plugin integration to handle mobile menus

= CSS =
* Added new typography styles for better reading
* Added styles for the "BNS Login" plugin
* Hide the post/page breadcrumbs in mobile displays
* Removed duplicate definitions from media queries stylesheet
* Updated `editor-style.css` to match new typography of theme
* Updated galleries styles to use HTML5 markup

= JavaScript =
* Integrated "SlickNav" (Created by Josh Cope - @computerwolf) for mobile menu support
* Integrated "FitVids" built by Chris Coyier (http://chriscoyier.net/) and Paravel (http://paravelinc.com/)

= Miscellaneous
* Added Contact Form 7 compatibility
* Removed `works-in-progress` folder from theme
* Updated `readme.txt` to note the use and license of SlickNav by Josh Cope
* Updated `readme.txt` to note the use and license of FitVids by Chris Coyier and Paravel
* Updated `style.css` description to emphasize the addition of the SlickNav and FitVids libraries
* Updated `screenshot.png` to better reflect latest release

/** ------------------------------------------------------------------------- */
== Version 1.2.5 ==
* Released July 2014

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts
* Added new method `OpusPrimusNavigation::pagination_wrapped` to provide actions hooks before and after the `pagination` method
* Added `antispambot` email protection to author biography email addresses
* Added sanity checks to ensure widgets are active before rendering sidebars
* Added `opus_primus_defaults.php` to replace `$opus_defaults` class
* Added `opus-primus-ignite.php` to reduce clutter in `functions.php`
* Added `opus_image_link_navigation_output` filter hook to provide access to navigation output
* Added `opus_tagline` to default hidden screen options array